[package]
name = "quake_serverinfo"
description = "Parse QuakeWorld serverinfo strings."
categories = ["parsing"]
keywords = ["servers", "quake", "quakeworld"]
repository = "https://github.com/vikpe/quake_serverinfo"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.2.1"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/benches/**",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [] }
pretty_assertions = "1.4.0"

[[bench]]
name = "bench_lib"
harness = false
