[package]
name = "quake_serverinfo"
description = "Parse QuakeWorld serverinfo strings."
categories = ["parsing"]
keywords = ["servers", "quake", "quakeworld"]
repository = "https://github.com/vikpe/quake_serverinfo"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.11.1"
edition = "2024"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[dependencies]
quake_infostring = "0.4.0"
quake_text = "0.3.0"

# optional
serde = { version = "1.0.204", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = []
serde = ["dep:serde"]
